# component-web-content-crawler

./: .gitignore  Dockerfile  README.md  bitbucket-pipelines.yml  build_n_test.sh  change_log.md  deploy.sh  docker-compose.yml  flake8.cfg  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configuration_description.md
component_config/sample-config/: config.json
component_config/sample-config/in/files/: order1.xml
component_config/sample-config/in/tables/: test.csv.manifest
scripts/: build_n_run.ps1  run.bat  run_kbc_tests.ps1  update_dev_portal_properties.sh
src/: component.py
src/hs/: hs_client.py  hs_result.py
src/webcrawler/: selenium_crawler.py
tests/: __init__.py  test_component.py
